--- a/public/v4/apps/docker-registry.yml
+++ b/public/v4/apps/docker-registry.yml
@@ -1,7 +1,7 @@
 captainVersion: 4
 caproverOneClickApp:
     instructions:
-        start: Just a simple Docker registry to save private docker images
+        start: Just a simple Docker registry to save private docker images. This image is private you must be logged in
         end: $$cap_appname-registry is deployed. 😄
     variables:
         - id: $$cap_api_image_tag
