--- a/public/v4/apps/printlift.yml
+++ b/public/v4/apps/printlift.yml
@@ -48,6 +48,8 @@ services:
             AWS_SECRET_ACCESS_KEY: ''
         ports:
             - '3000:3000'
+        caproverExtra:
+            containerHttpPort: '3000'
     $$cap_appname-app:
         depends_on:
             - $$cap_appname-api
@@ -56,5 +58,7 @@ services:
             environment: 'container'
         ports:
             - '8080:8080'
+        caproverExtra:
+            containerHttpPort: '8080'
 volumes:
     data:
