--- a/public/v4/apps/directus.yml
+++ b/public/v4/apps/directus.yml
@@ -129,6 +129,7 @@ caproverOneClickApp:
 
     - id: $$cap_PUBLIC_URL
       label: "Public URL"
+      description: "URL where your API can be reached on the web. Used for things like OAuth redirects, forgot-password emails, and publicly-accessible logos."
       defaultValue: "https://directus.example.com"
 
     - id: $$cap_EMAIL_SMTP_HOST
